[project]
name = "ai-agent-human-in-loop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=1.2.5",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "pillow>=12.0.0",
    "typing>=3.10.0.0",
]
